--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,11 @@
         android:orientation="vertical"
         android:gravity="center">
         <TextView
+            android:id="@+id/tv_cauhoi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:text="Thái Bình Dương lớn hơn Đại Tây Dương?" />
+            android:text="@string/cauhoi" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,11 +25,11 @@
             <Button
                 android:id="@+id/btn_traloidung"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:text="TRUE"/>
+                android:layout_height="wrap_content" android:text="@string/dung"/>
             <Button
                 android:id="@+id/btn_traloisai"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:text="FALSE"/>
+                android:layout_height="wrap_content" android:text="@string/sai"/>
         </LinearLayout>
     </LinearLayout>
 
