--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,28 +9,50 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
-        <TextView
-            android:id="@+id/tv_cauhoi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="@string/cauhoi" />
+        android:orientation="vertical">
         <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_gravity="center"
             android:gravity="center">
-            <Button
-                android:id="@+id/btn_traloidung"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:text="@string/dung"/>
-            <Button
-                android:id="@+id/btn_traloisai"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:text="@string/sai"/>
+            <TextView
+                android:id="@+id/tv_cauhoi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+                <Button
+                    android:id="@+id/btn_traloidung"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:text="@string/dung"/>
+                <Button
+                    android:id="@+id/btn_traloisai"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:text="@string/sai"/>
+            </LinearLayout>
         </LinearLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom">
+            <Button
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/btn_previous"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:text="@string/previous"/>
+            <Button
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:id="@+id/btn_next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:text="@string/next"/>
+        </RelativeLayout>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
