--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.lemycanh.geoquiz4.MainActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_centerInParent="true"
             android:gravity="center">
             <TextView
                 android:id="@+id/tv_cauhoi"
@@ -38,8 +37,8 @@
         </LinearLayout>
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="bottom">
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true">
             <Button
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentBottom="true"
@@ -53,6 +52,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:text="@string/next"/>
         </RelativeLayout>
-    </LinearLayout>
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
