--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -10,7 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
-            android:id="@+id/question_maincontent"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -39,14 +38,16 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/question_maincontent">
+            android:layout_alignParentBottom="true">
             <ImageButton
                 android:layout_alignParentLeft="true"
+                android:layout_alignParentBottom="true"
                 android:id="@+id/btn_previous"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:src="@drawable/baseline_navigate_before_black_18"/>
             <ImageButton
                 android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
                 android:id="@+id/btn_next"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:src="@drawable/baseline_navigate_next_black_18"/>
